Fix unittest warning